--- a/9.4 Flexbox Pricing Table Project/index.html
+++ b/9.4 Flexbox Pricing Table Project/index.html
@@ -13,7 +13,7 @@
 
     /* Hint: What can you do with a media query and flexbox? */
     @media (max-width: 1250px) {
-      d.pricing-container {
+      .pricing-container {
         flex-direction: column;
         align-items: center;
         height: 100%;
